add calculator functionality

--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
+<div class="calculator">
+    <div>
+    <div class="calc-display">
+        <div class="display">0000</div>
+        <button id="history">history</button>
+    </div>
+    <div class="popup-box"></div>
+    </div>
+    <div class="calc-buttons">
+        <button class="number-buttons">1</button>
+        <button class="number-buttons">2</button>
+        <button class="number-buttons">3</button>
+        <button class="function-buttons">+</button>
+        <button class="number-buttons">4</button>
+        <button class="number-buttons">5</button>
+        <button class="number-buttons">6</button>
+        <button class="function-buttons">-</button>
+        <button class="number-buttons">7</button>
+        <button class="number-buttons">8</button>
+        <button class="number-buttons">9</button>
+        <button class="function-buttons">*</button>
+        <button id="clear">clear</button>
+        <button class="number-buttons">0</button>
+        <button class="number-buttons">.</button>
+        <button class="function-buttons">÷</button>
+        <button id="equals">=</button>
+    </div>
+</div>
+<script src="app.js"></script>
 </body>
 </html>
